[package]
name = "Sled-issue"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "*"
tokio="*"
tracing-appender = "0.1.2"
serde_json = "*"
serde="*"
sled="*"
chrono="*"
bastion="*"
rm_rf="*"
sysinfo = "*"