[package]
name = "Sled-issue"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "*"
serde_json="*"
serde = {version = "1.0.126", features = ["derive"]}
serde_derive = "*"
ledb="*"
ledb-types = "*"
dashmap = "4.0.2"